--- a/src/docs/userguide/ideSupport.tex
+++ b/src/docs/userguide/ideSupport.tex
@@ -15,7 +15,7 @@ There is a Groovy plugin for eclipse. We don't know in what state it is and how 
 \section{Using Gradle without IDE support} % (fold)
 \label{sec:using_gradle_without_ide_support}
 What we can do for you is to spare you typing things like \texttt{throw new org.gradle.api.tasks.StopExecutionException()} and just type \texttt{throw new StopExecutionException()} instead. We do this by automatically adding a set of import statements to the gradle scripts before Gradle executes them. This set is defined by a properties file \texttt{gradle-imports} in the gradle distribution. It has the following content.
-\codeInput{../../toplevel/gradle-imports}
+\VerbatimInput[frame=single,label=gradle-imports]{../../toplevel/gradle-imports}
 You can define a project specific set of imports to be added to your build scripts. Just place a file called \texttt{gradle-imports} in your root project directory. If you start Gradle with the {-I} option, the imports defined in the Gradle distribution are disabled. The imports defined in your project directory are always used.
 % section using_gradle_without_ide_support (end)
 
