--- a/src/toplevel/changelog.txt
+++ b/src/toplevel/changelog.txt
@@ -1,49 +1,67 @@
 
-Release Notes - Gradle - Version 0.7
+Release Notes - Gradle - Version 0.8
 
 
 ** Bug
-    * [GRADLE-415] - Use patched ivy with Fix for IVY-1066 (was: -tests.jar dependency download failing)
-    * [GRADLE-518] - The copy method of a dependency does not copy the configuration.
-    * [GRADLE-524] - ide task in gradle's own build.gradle doesn't work
-    * [GRADLE-526] - Relative Path in GRADLE_HOME does not work any more
-    * [GRADLE-527] - project.libs.archiveTasks no longer exists but is used in UG 24.59
-    * [GRADLE-528] - testResource dir property documentation error
-    * [GRADLE-530] - New Jar task always included classes found in 'classesDir'
-    * [GRADLE-531] -  ide task in buildSrc/build.gradle doesn't work
-    * [GRADLE-534] - Dependency reports do not show the correct hierarchy
-    * [GRADLE-536] - integTest target in Gradle's own build can't be re-run without clean
-    * [GRADLE-538] - Test detection seems to think that every class under src/test/java is a test class
-    * [GRADLE-540] - scanForTestClasses=false has no effect
+    * [GRADLE-51] - The Java plugin must add a StopExecution condition to its Jar task.
+    * [GRADLE-252] - Gradle's build fails when executing 'gradle -Dskip.compile=true ... '
+    * [GRADLE-286] - All gradle methods and properties should work with GString
+    * [GRADLE-326] - The dependencies introduced by the Java plugin should be documented with a dag diagram
+    * [GRADLE-462] - Gradle doesn't clean up temp files
+    * [GRADLE-512] - trunk tests fail due to upper/lowercase inconsistency in path
+    * [GRADLE-532] - Example 4.13 might produce NPE
+    * [GRADLE-553] - The custom filePath property should not be contained in the published ivy.xml file.
+    * [GRADLE-561] - Gradle method bug from tutorial doc
+    * [GRADLE-575] - systemProp.http.proxyHost documentation is incorrect
+    * [GRADLE-582] - Impossible to add listeners
+    * [GRADLE-584] - War plugin does not create build dependencies on Runtime configuration
+    * [GRADLE-586] - Context classloader is not set to project classloader when build script is executed
+    * [GRADLE-595] - jettyRun task does not depend on processResources task
+    * [GRADLE-597] - Filters in CopySpecs are not Inherited
+    * [GRADLE-605] - gradle -q prints out '.' characters when downloading artifacts
+    * [GRADLE-620] - Task eclipse doesn't put file references of dependencies into project's classpath
+    * [GRADLE-637] - Artifacts from transitive self-resolving dependencies from another project are included even when transitive = false
+    * [GRADLE-638] - gradle shell script not marked as executable
+    * [GRADLE-653] - Client Module Dependencies can't be used across projects.
+    * [GRADLE-657] - Gradle tries to delete a non-existent configuration file  (testng.xml)
+    * [GRADLE-660] - No way of setting nested javac elements in groovy compile
 
 ** Improvement
-    * [GRADLE-121] - Offer option to print out the DAG for executing a particular task. This should also be printed out in debug mode.
-    * [GRADLE-174] - Add javadocs to the public API.
-    * [GRADLE-208] - Log the start of the project evaluation in info mode not the end (to make debugging easier)
-    * [GRADLE-239] - Document on the website and in the user's guide how to submit a patch for the user's guide.
-    * [GRADLE-258] - doc examples could be more Groovy idiomatic
-    * [GRADLE-316] - Provide a consistent mechanism to add properties and methods to Project, Task and Settings objects
-    * [GRADLE-331] - The documentation should have a chapter how to use Ant.
-    * [GRADLE-351] - Set project directory as default dir for ant exec task
-    * [GRADLE-353] - Set baseDir of AntBuilder's Ant project to the directory of the Gradle project
-    * [GRADLE-357] - Replace unmanaged classpath with new dependency type
-    * [GRADLE-442] - Upgrade groovy version used for build scripts to 1.6
-    * [GRADLE-481] - Simplified way to obtain all projects and tasks
-    * [GRADLE-490] - The UsersGuideIntegrationTest should evaluate a script only once.
-    * [GRADLE-515] - User Guide grammar fixes and other minor improvements
-    * [GRADLE-516] - documentation - better titles for examples & list of examples
-    * [GRADLE-517] - Simplify ant project property access from build script
-    * [GRADLE-520] - Provide the option to pass command line style parameters for embedded usage.
-    * [GRADLE-522] - Provide listeners for plugin registration and usage
-    * [GRADLE-529] - userguide - pdf version - page number
-    * [GRADLE-537] - Update Java Plugin Task Dependencies
-    * [GRADLE-542] - Change default fork mode for Java project tests to 'once'
-    * [GRADLE-543] - Provide a native copy task
-    * [GRADLE-545] - The resolve of a ProjectDependency should return its self resolving dependencies.
+    * [GRADLE-370] - Allow convention mapping to be applied to any property of any domain object
+    * [GRADLE-421] - buildSrc can't be used inside settings.gradle
+    * [GRADLE-423] - javadoc task should provide a source file specification mechanism which is consistent with compile, test, resources, etc
+    * [GRADLE-428] - Avoid to create .gradle in script dir
+    * [GRADLE-521] - Cache empty build scripts
+    * [GRADLE-525] - Enhancement to support debugging
+    * [GRADLE-548] - Allow the artifact production tasks to be specified for a file dependency
+    * [GRADLE-556] - It should be possible to remove an artifact from a configuration.
+    * [GRADLE-562] - documentation - accessing Maven password protected repositories
+    * [GRADLE-564] - Use a repository layout for the internal repository that uses jar names with version numbers.
+    * [GRADLE-565] - Returne metadata for the files of a ResolvedDependency
+    * [GRADLE-572] - documentation - updates/fixes to 27 artifact management
+    * [GRADLE-573] - documentation - 6 Java Quickstart - Eclipse plugin fix
+    * [GRADLE-578] - text about configurations.compile.transitive = true
+    * [GRADLE-583] - Pull Test Task out of jar dependency chain
+    * [GRADLE-589] - A better OSGi sample project is needed
+    * [GRADLE-591] - Simplify logging at lifecycle and quiet log levels
+    * [GRADLE-593] - Provide a way to exclude tasks from the DAG using the command-line
+    * [GRADLE-599] - Remove JUnit jar from Gradle distribution.
+    * [GRADLE-602] - Allow a custom task to have a no-args/default constructor
+    * [GRADLE-606] - userguide - eclipse plugin
+    * [GRADLE-608] - Make it easier to receive logging output when embedding Gradle
+    * [GRADLE-614] - Allow dynamic properties to be applied to any domain object
+    * [GRADLE-628] - GroovyDoc task does not expose most of the properties of the underlying ant groovydoc task.
+    * [GRADLE-636] - Support scala + java joint compilation
+    * [GRADLE-654] - Use cached ivy module descriptors across configurations and subprojects.
 
 ** New Feature
-    * [GRADLE-275] - Gradle should be able to read and use an Ant build file
-    * [GRADLE-519] - Allow build script classpath to be specified in the build script
-    * [GRADLE-523] - Offer a dry-run option for a Gradle build.
-    * [GRADLE-533] - Initial Framework for Task Optimization
-    * [GRADLE-535] - Configuration should return the files for a subset of the dependencies
+    * [GRADLE-287] - Provide Scala Plugin
+    * [GRADLE-467] - Improve the command-line interface
+    * [GRADLE-554] - Add checkstyle support
+    * [GRADLE-555] - Add CodeNarc support
+    * [GRADLE-571] - Introduce a SourceDirectory domain object
+    * [GRADLE-588] - Add support for an init script
+    * [GRADLE-626] - GUI for Gradle
+
+** Task
+    * [GRADLE-601] - Document how to write a custom task
