Some updates for 0.9-preview-2 release

--- a/src/toplevel/changelog.txt
+++ b/src/toplevel/changelog.txt
@@ -1,67 +1,4 @@
 
-Release Notes - Gradle - Version 0.8
+Release Notes - Gradle - Version 0.9-preview-2
 
-
-** Bug
-    * [GRADLE-51] - The Java plugin must add a StopExecution condition to its Jar task.
-    * [GRADLE-252] - Gradle's build fails when executing 'gradle -Dskip.compile=true ... '
-    * [GRADLE-286] - All gradle methods and properties should work with GString
-    * [GRADLE-326] - The dependencies introduced by the Java plugin should be documented with a dag diagram
-    * [GRADLE-462] - Gradle doesn't clean up temp files
-    * [GRADLE-512] - trunk tests fail due to upper/lowercase inconsistency in path
-    * [GRADLE-532] - Example 4.13 might produce NPE
-    * [GRADLE-553] - The custom filePath property should not be contained in the published ivy.xml file.
-    * [GRADLE-561] - Gradle method bug from tutorial doc
-    * [GRADLE-575] - systemProp.http.proxyHost documentation is incorrect
-    * [GRADLE-582] - Impossible to add listeners
-    * [GRADLE-584] - War plugin does not create build dependencies on Runtime configuration
-    * [GRADLE-586] - Context classloader is not set to project classloader when build script is executed
-    * [GRADLE-595] - jettyRun task does not depend on processResources task
-    * [GRADLE-597] - Filters in CopySpecs are not Inherited
-    * [GRADLE-605] - gradle -q prints out '.' characters when downloading artifacts
-    * [GRADLE-620] - Task eclipse doesn't put file references of dependencies into project's classpath
-    * [GRADLE-637] - Artifacts from transitive self-resolving dependencies from another project are included even when transitive = false
-    * [GRADLE-638] - gradle shell script not marked as executable
-    * [GRADLE-653] - Client Module Dependencies can't be used across projects.
-    * [GRADLE-657] - Gradle tries to delete a non-existent configuration file  (testng.xml)
-    * [GRADLE-660] - No way of setting nested javac elements in groovy compile
-
-** Improvement
-    * [GRADLE-370] - Allow convention mapping to be applied to any property of any domain object
-    * [GRADLE-421] - buildSrc can't be used inside settings.gradle
-    * [GRADLE-423] - javadoc task should provide a source file specification mechanism which is consistent with compile, test, resources, etc
-    * [GRADLE-428] - Avoid to create .gradle in script dir
-    * [GRADLE-521] - Cache empty build scripts
-    * [GRADLE-525] - Enhancement to support debugging
-    * [GRADLE-548] - Allow the artifact production tasks to be specified for a file dependency
-    * [GRADLE-556] - It should be possible to remove an artifact from a configuration.
-    * [GRADLE-562] - documentation - accessing Maven password protected repositories
-    * [GRADLE-564] - Use a repository layout for the internal repository that uses jar names with version numbers.
-    * [GRADLE-565] - Returne metadata for the files of a ResolvedDependency
-    * [GRADLE-572] - documentation - updates/fixes to 27 artifact management
-    * [GRADLE-573] - documentation - 6 Java Quickstart - Eclipse plugin fix
-    * [GRADLE-578] - text about configurations.compile.transitive = true
-    * [GRADLE-583] - Pull Test Task out of jar dependency chain
-    * [GRADLE-589] - A better OSGi sample project is needed
-    * [GRADLE-591] - Simplify logging at lifecycle and quiet log levels
-    * [GRADLE-593] - Provide a way to exclude tasks from the DAG using the command-line
-    * [GRADLE-599] - Remove JUnit jar from Gradle distribution.
-    * [GRADLE-602] - Allow a custom task to have a no-args/default constructor
-    * [GRADLE-606] - userguide - eclipse plugin
-    * [GRADLE-608] - Make it easier to receive logging output when embedding Gradle
-    * [GRADLE-614] - Allow dynamic properties to be applied to any domain object
-    * [GRADLE-628] - GroovyDoc task does not expose most of the properties of the underlying ant groovydoc task.
-    * [GRADLE-636] - Support scala + java joint compilation
-    * [GRADLE-654] - Use cached ivy module descriptors across configurations and subprojects.
-
-** New Feature
-    * [GRADLE-287] - Provide Scala Plugin
-    * [GRADLE-467] - Improve the command-line interface
-    * [GRADLE-554] - Add checkstyle support
-    * [GRADLE-555] - Add CodeNarc support
-    * [GRADLE-571] - Introduce a SourceDirectory domain object
-    * [GRADLE-588] - Add support for an init script
-    * [GRADLE-626] - GUI for Gradle
-
-** Task
-    * [GRADLE-601] - Document how to write a custom task
+See http://docs.codehaus.org/display/GRADLE/Gradle+0.9+Release+Notes
