--- a/src/toplevel/changelog.txt
+++ b/src/toplevel/changelog.txt
@@ -1,4 +1,4 @@
 
-Release Notes - Gradle - Version 0.9.2
+Release Notes - Gradle - Version ${version}
 
-See http://docs.codehaus.org/display/GRADLE/Gradle+0.9.2+Release+Notes
+See http://docs.codehaus.org/display/GRADLE/Gradle+${version}+Release+Notes
