--- a/subprojects/docs/src/docs/userguide/buildCache.adoc
+++ b/subprojects/docs/src/docs/userguide/buildCache.adoc
@@ -143,6 +143,9 @@ Currently, the following built-in Gradle tasks are cacheable:
 * Scala toolchain:
     api:org.gradle.api.tasks.scala.ScalaCompile[],
     api:org.gradle.api.tasks.scala.ScalaDoc[]
+* Native toolchain:
+    api:org.gradle.language.cpp.tasks.CppCompile[],
+    api:org.gradle.language.c.tasks.CCompile[]
 * Testing:
     api:org.gradle.api.tasks.testing.Test[]
 * Code quality tasks:
@@ -157,20 +160,6 @@ Currently, the following built-in Gradle tasks are cacheable:
 * Other tasks:
     api:org.gradle.plugin.devel.tasks.ValidateTaskProperties[],
     api:org.gradle.api.tasks.WriteProperties[]
-
-[[sec:task_output_caching_native_tasks]]
-===== Caching native compilation
-
-It is also possible to enable caching for the native toolchain.
-This can be done by setting the system property `org.gradle.caching.native` to `true`.
-Caching is then enabled for api:org.gradle.language.c.tasks.CCompile[] and api:org.gradle.language.cpp.tasks.CppCompile[].
-
-[NOTE]
-====
-Caching native tasks is experimental.
-
-C/C++ compilers embed absolute paths to sources into object files, so you may not be able to debug object files which have been loaded from the cache.
-====
 
 [[sec:task_output_caching_non_cacheable_tasks]]
 ===== Non-cacheable tasks
